--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "semi": ["warn", "never"],
     "max-len": "off",
     "comma-dangle": ["warn", "never"],
-    "object-curly-spacing": ["warn", "always"] 
+    "object-curly-spacing": ["warn", "always"],
+    
   }
 }
