--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "scripts": {
+    "eslint": "eslint **/*.{ts,tsx}"
   }
 }
